--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "moongose": "^1.0.0",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "otp-generator": "^4.0.1",
+    "stripe": "^16.8.0"
   }
 }
