--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.8.0",
     "moongose": "^1.0.0",
     "nodemailer": "^6.9.14",
